‘修改多列表显示’

--- a/demo/src/main/res/layout/fragment_live.xml
+++ b/demo/src/main/res/layout/fragment_live.xml
@@ -9,9 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_bar_height">
     </LinearLayout>
-    <TextView
-        android:text="Live"
-        android:padding="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_live"
+        android:background="#ff00ff"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
