--- a/demo/src/main/res/layout/item_fragment_home.xml
+++ b/demo/src/main/res/layout/item_fragment_home.xml
@@ -2,18 +2,16 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#ff00ff"
+    android:background="#FFF"
     android:layout_width="match_parent"
     android:layout_height="70dp">
     <TextView
         android:id="@+id/tv_name"
-        android:text="1111111111"
         android:padding="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/tv_desc"
-        android:text="描述"
         android:padding="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
