--- a/demo/src/main/res/layout/fragment_video.xml
+++ b/demo/src/main/res/layout/fragment_video.xml
@@ -9,9 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_bar_height">
     </LinearLayout>
-    <TextView
-        android:text="Video"
-        android:padding="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_layout_video"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.cc.dc.common.custom.LoadMoreRecyclerView
+            android:id="@+id/recycler_view_video"
+            android:background="#ffff00"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </com.cc.dc.common.custom.LoadMoreRecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
