--- a/demo/src/main/res/layout/item_fragment_video.xml
+++ b/demo/src/main/res/layout/item_fragment_video.xml
@@ -7,10 +7,10 @@
     android:layout_height="100dp">
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/tv_desc"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
