--- a/demo/src/main/res/layout/fragment_recommend.xml
+++ b/demo/src/main/res/layout/fragment_recommend.xml
@@ -4,8 +4,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:text="HomeRecommend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager_slider"
+        android:layout_width="match_parent"
+        android:layout_height="150dp">
+    </android.support.v4.view.ViewPager>
 </LinearLayout>
