--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -5,13 +5,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.cc.dc.custom.NoAnimateViewPager
-        android:id="@+id/view_pager_main"
+    <FrameLayout
+        android:id="@+id/container"
         android:background="@color/white"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp">
-    </com.cc.dc.custom.NoAnimateViewPager>
+    </FrameLayout>
     <com.flyco.tablayout.CommonTabLayout
         android:id="@+id/common_tab_layout_main"
         android:layout_width="match_parent"
