--- a/demo/src/main/res/layout/item_fragment_live.xml
+++ b/demo/src/main/res/layout/item_fragment_live.xml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="#ffff00"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="ddddd"
+    <ImageView
+        android:id="@+id/image_room"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="120dp" />
-</LinearLayout>
+        android:layout_height="100dp" />
+    <TextView
+        android:id="@+id/tv_nick_name"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="ABC"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/tv_online"
+        android:layout_gravity="top|right"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:text="11111"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</FrameLayout>
