添加直播游戏分类

--- a/demo/src/main/res/layout/fragment_live_cate.xml
+++ b/demo/src/main/res/layout/fragment_live_cate.xml
@@ -3,6 +3,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_game_list"
+        android:visibility="gone"
+        android:background="#ff00ff"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_layout_live_cate"
         android:layout_width="match_parent"
