--- a/demo/src/main/res/layout/fragment_live_cate.xml
+++ b/demo/src/main/res/layout/fragment_live_cate.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_game_list"
-        android:visibility="gone"
-        android:background="#ff00ff"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_layout_live_cate"
         android:layout_width="match_parent"
@@ -21,4 +14,25 @@
             android:layout_height="match_parent">
         </com.cc.dc.common.custom.LoadMoreRecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/layout_game_cate"
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_game_list"
+            android:background="#ff00ff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+        <TextView
+            android:id="@+id/btn_change"
+            android:text="show/hide"
+            android:padding="5dp"
+            android:gravity="center"
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+</FrameLayout>
