添加分类的item的点击事件,item单行显示

--- a/demo/src/main/res/layout/item_live_game_cate.xml
+++ b/demo/src/main/res/layout/item_live_game_cate.xml
@@ -9,6 +9,8 @@
         android:background="@drawable/bg_live_game_cate"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:gravity="center"
         android:textColor="@color/white"
         android:layout_width="100dp"
