--- a/demo/src/main/res/layout/fragment_live_cate.xml
+++ b/demo/src/main/res/layout/fragment_live_cate.xml
@@ -16,7 +16,7 @@
     </android.support.v4.widget.SwipeRefreshLayout>
     <LinearLayout
         android:id="@+id/layout_game_cate"
-        android:visibility="gone"
+        android:visibility="visible"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -33,6 +33,6 @@
             android:gravity="center"
             android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="30dp" />
     </LinearLayout>
 </FrameLayout>
