--- a/memorytraining/src/main/res/layout/activity_main.xml
+++ b/memorytraining/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_bar_height">
         <TextView
@@ -12,6 +13,16 @@
             android:text="测试记忆"
             android:layout_gravity="center_vertical"
             android:padding="10dp"
+            android:textColor="@color/colorAccent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_pile_path"
+            android:text="地点桩记忆"
+            android:layout_gravity="center_vertical"
+            android:padding="10dp"
+            android:layout_marginLeft="10dp"
+            android:textColor="#fff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
