--- a/demo/src/main/res/values/dimens.xml
+++ b/demo/src/main/res/values/dimens.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="padding_10">10dp</dimen>
+    <dimen name="padding_15">15dp</dimen>
+    <dimen name="padding_20">20dp</dimen>
+
     <dimen name="title_bar_height">48dp</dimen>
+
+    <dimen name="circle_image_size">70dp</dimen>
 </resources>
