--- a/demo/src/main/res/layout/fragment_find.xml
+++ b/demo/src/main/res/layout/fragment_find.xml
@@ -90,6 +90,81 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <View
+            android:layout_marginTop="5dp"
+            android:background="@color/yellow"
+            android:layout_width="match_parent"
+            android:layout_height="1px"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_info_1"
+                android:textColor="@color/gray_999"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:gravity="center_horizontal"
+                android:layout_weight="1"
+                android:padding="5dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <View
+                android:background="@color/yellow"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp"
+                android:layout_width="1px"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/tv_info_2"
+                android:textColor="@color/gray_999"
+                android:gravity="center_horizontal"
+                android:padding="5dp"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <View
+            android:background="@color/yellow"
+            android:layout_width="match_parent"
+            android:layout_height="1px"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_info_3"
+                android:textColor="@color/gray_999"
+                android:gravity="center_horizontal"
+                android:padding="5dp"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <View
+                android:background="@color/yellow"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp"
+                android:layout_width="1px"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/tv_info_4"
+                android:textColor="@color/gray_999"
+                android:gravity="center_horizontal"
+                android:padding="5dp"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <View
+            android:layout_marginBottom="5dp"
+            android:background="@color/yellow"
+            android:layout_width="match_parent"
+            android:layout_height="1px"/>
+    </LinearLayout>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_layout_video"
         android:layout_width="match_parent"
