--- a/demo/src/main/res/layout/fragment_find.xml
+++ b/demo/src/main/res/layout/fragment_find.xml
@@ -167,6 +167,7 @@
     </LinearLayout>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_layout_video"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.cc.dc.common.custom.LoadMoreRecyclerView
