--- a/demo/src/main/res/values/dimens.xml
+++ b/demo/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="padding_5">5dp</dimen>
     <dimen name="padding_10">10dp</dimen>
     <dimen name="padding_15">15dp</dimen>
     <dimen name="padding_20">20dp</dimen>
@@ -7,4 +8,8 @@
     <dimen name="title_bar_height">48dp</dimen>
 
     <dimen name="circle_image_size">70dp</dimen>
+
+    <dimen name="find_hot_talk_img_size">30dp</dimen>
+    <dimen name="find_hot_talk_img_padding">3dp</dimen>
+    <dimen name="find_riv_corner_radius">3dp</dimen>
 </resources>
