--- a/demo/src/main/res/layout/fragment_follow.xml
+++ b/demo/src/main/res/layout/fragment_follow.xml
@@ -21,4 +21,9 @@
         android:layout_height="96dp"
         app:civ_border_width="2dp"
         app:civ_border_color="#FF000000"/>
+    <com.cc.dc.common.custom.LoadMoreRecyclerView
+        android:id="@+id/lrv_view_follow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.cc.dc.common.custom.LoadMoreRecyclerView>
 </LinearLayout>
