默认隐藏四个item

--- a/demo/src/main/res/layout/fragment_find.xml
+++ b/demo/src/main/res/layout/fragment_find.xml
@@ -93,6 +93,8 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/layout_info"
+        android:visibility="gone"
         android:background="@color/white"
         android:orientation="vertical"
         android:layout_width="match_parent"
