--- a/demo/src/main/res/layout/fragment_find_digest.xml
+++ b/demo/src/main/res/layout/fragment_find_digest.xml
@@ -2,11 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@color/gray_ddd"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <com.cc.dc.common.custom.LoadMoreRecyclerView
         android:id="@+id/recycler_view_find_digest"
-        android:background="#ffff00"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </com.cc.dc.common.custom.LoadMoreRecyclerView>
