--- a/demo/src/main/res/layout/item_find_feed_layout.xml
+++ b/demo/src/main/res/layout/item_find_feed_layout.xml
@@ -7,11 +7,12 @@
     android:layout_height="wrap_content">
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_marginTop="@dimen/padding_5"
+        android:layout_marginTop="@dimen/padding_15"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <de.hdodenhof.circleimageview.CircleImageView
-            android:src="@drawable/number_code_0"
+            android:id="@+id/civ_avatar"
+            android:layout_gravity="center_vertical"
             android:layout_width="30dp"
             android:layout_height="30dp" />
         <LinearLayout
@@ -21,7 +22,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content">
             <TextView
-                android:text="会打野的哈士奇"
+                android:id="@+id/tv_nick_name"
                 android:textColor="#333"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -30,13 +31,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:text="19分钟前"
+                    android:id="@+id/tv_create_at"
                     android:textColor="@color/gray_999"
                     android:textSize="10sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
-                    android:text="1699阅读"
+                    android:id="@+id/tv_views_count"
                     android:textColor="@color/gray_999"
                     android:textSize="10sp"
                     android:layout_marginLeft="@dimen/padding_10"
@@ -45,17 +46,22 @@
             </LinearLayout>
         </LinearLayout>
         <TextView
-            android:text="关注"
-            android:paddingLeft="@dimen/padding_5"
-            android:paddingRight="@dimen/padding_5"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
+            android:text="@string/find_un_follow"
+            android:paddingLeft="@dimen/padding_10"
+            android:paddingRight="@dimen/padding_10"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/yellow"
+            android:background="@drawable/bg_find_follow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <TextView
-        android:layout_marginTop="@dimen/padding_5"
-        android:text="11111111111111111111111111111111111111hdaakjdadaddadaddadsad"
+        android:id="@+id/tv_title"
+        android:layout_marginTop="@dimen/padding_10"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <ImageView
