一些自定义view的简单使用

--- a/customview/src/main/res/layout/custom_view_layout.xml
+++ b/customview/src/main/res/layout/custom_view_layout.xml
@@ -4,9 +4,18 @@
     android:background="#ff0"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <Button
+        android:text="AnimationTest"
+        android:onClick="animationTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <com.cc.dc.customview.view.CustomVolumeControlBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <com.cc.dc.customview.view.CustomLayout
         android:padding="20dp"
         android:layout_margin="30dp"
+        android:visibility="gone"
         android:background="#fff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
