--- a/customview/src/main/res/layout/custom_view_layout.xml
+++ b/customview/src/main/res/layout/custom_view_layout.xml
@@ -5,6 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <Button
+        android:text="AsyncTaskTest"
+        android:onClick="asyncTaskTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
         android:text="AnimationTest"
         android:onClick="animationTest"
         android:layout_width="wrap_content"
