--- a/customview/src/main/res/layout/custom_view_layout.xml
+++ b/customview/src/main/res/layout/custom_view_layout.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#ff0"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.cc.dc.customview.view.CustomView2
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <com.cc.dc.customview.view.CustomView1
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <com.cc.dc.customview.view.CustomPath2
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <com.cc.dc.customview.view.CustomTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <com.cc.dc.customview.view.CustomPath
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <Button
         android:text="AsyncTaskTest"
         android:onClick="asyncTaskTest"
