一些自定义View练习code

--- a/customview/src/main/res/layout/custom_view_layout.xml
+++ b/customview/src/main/res/layout/custom_view_layout.xml
@@ -3,6 +3,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.cc.dc.customview.view.CustomView5
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <com.cc.dc.customview.view.CustomView4
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <com.cc.dc.customview.view.CustomView3
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <com.cc.dc.customview.view.CustomView2
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
