--- a/customview/src/main/res/layout/custom_view_layout.xml
+++ b/customview/src/main/res/layout/custom_view_layout.xml
@@ -3,6 +3,34 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.cc.dc.customview.view.CustomView6
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <com.cc.dc.customview.view.CustomScrollerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ListView
+            android:background="#f00"
+            android:layout_width="match_parent"
+            android:layout_height="400dp">
+        </ListView>
+        <ListView
+            android:background="#0f0"
+            android:layout_width="match_parent"
+            android:layout_height="400dp">
+        </ListView>
+        <ListView
+            android:background="#00f"
+            android:layout_width="match_parent"
+            android:layout_height="400dp">
+        </ListView>
+    </com.cc.dc.customview.view.CustomScrollerView>
+    <com.cc.dc.customview.view.CustomClipView2
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <com.cc.dc.customview.view.CustomClipView1
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <com.cc.dc.customview.view.CustomView5
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
