--- a/demo/src/main/res/layout/fragment_user.xml
+++ b/demo/src/main/res/layout/fragment_user.xml
@@ -13,12 +13,17 @@
     <Button
         android:id="@+id/btn_show_news"
         android:text="仿网易"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content" />
     <Button
         android:id="@+id/btn_show_dialog"
         android:text="3D-Dialog"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn_show_empty"
+        android:text="Empty_NetError"
+        android:layout_width="120dp"
         android:layout_height="wrap_content" />
     <RelativeLayout
         android:id="@+id/rl_content"
