--- a/demo/src/main/res/layout/activity_empty_error.xml
+++ b/demo/src/main/res/layout/activity_empty_error.xml
@@ -16,4 +16,19 @@
             android:layout_width="150dp"
             android:layout_height="150dp" />
     </LinearLayout>
+    <LinearLayout
+        android:background="#ffff00"
+        android:layout_marginTop="20dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp">
+        <TextView
+            android:id="@+id/tv_name2"
+            android:text="222"
+            android:padding="5dp"
+            android:gravity="center"
+            android:textColor="#333"
+            android:background="#00ffff"
+            android:layout_width="150dp"
+            android:layout_height="150dp" />
+    </LinearLayout>
 </LinearLayout>
