--- a/customview/src/main/res/layout/custom_view_layout.xml
+++ b/customview/src/main/res/layout/custom_view_layout.xml
@@ -3,6 +3,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.cc.dc.customview.view.RefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </com.cc.dc.customview.view.RefreshLayout>
     <com.cc.dc.customview.view.CustomRandomTextView
         android:id="@+id/tv_random"
         android:visibility="gone"
