--- a/customview/src/main/res/layout/layout_content.xml
+++ b/customview/src/main/res/layout/layout_content.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cc.dc.customview.view.CustomLayoutTest xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="#f00"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-</LinearLayout>
+</com.cc.dc.customview.view.CustomLayoutTest>
