--- a/customview/src/main/res/layout/custom_view_layout.xml
+++ b/customview/src/main/res/layout/custom_view_layout.xml
@@ -16,7 +16,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-        <TextView
+        <Button
             android:id="@+id/btn_delete"
             android:text="Delete"
             android:background="#0f0"
