--- a/customview/src/main/res/layout/item_list_test_player.xml
+++ b/customview/src/main/res/layout/item_list_test_player.xml
@@ -17,6 +17,7 @@
     <com.cc.dc.customview.view.CustomLinearLayout
         android:id="@+id/layer_player"
         android:orientation="vertical"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.aliyun.vodplayerview.widget.AliyunVodPlayerView
