--- a/memorytraining/src/main/res/layout/activity_main.xml
+++ b/memorytraining/src/main/res/layout/activity_main.xml
@@ -25,6 +25,15 @@
             android:textColor="#fff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_pi"
+            android:text="1000位π"
+            android:layout_gravity="center_vertical"
+            android:padding="10dp"
+            android:layout_marginLeft="10dp"
+            android:textColor="#ff0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_main"
