一些列表播放修改测试

--- a/customview/src/main/res/layout/activity_test_player.xml
+++ b/customview/src/main/res/layout/activity_test_player.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.gongwen.marqueen.MarqueeView
+        android:id="@+id/marqueeView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:flipInterval="2500"
+        android:inAnimation="@anim/in_bottom"
+        android:outAnimation="@anim/out_top"
+        app:marqueeAnimDuration="2000">
+    </com.gongwen.marqueen.MarqueeView>
+    <SurfaceView
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
+    <com.aliyun.vodplayerview.widget.AliyunVodPlayerView
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
+    </com.aliyun.vodplayerview.widget.AliyunVodPlayerView>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
