--- a/customview/src/main/res/layout/item_list_test_player.xml
+++ b/customview/src/main/res/layout/item_list_test_player.xml
@@ -15,23 +15,19 @@
         android:textSize="25sp"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
+    <ImageView
+        android:id="@+id/iv_play"
+        android:src="@drawable/icon_play"
+        android:visibility="visible"
+        android:layout_gravity="center"
+        android:layout_width="60dp"
+        android:layout_height="60dp" />
     <com.cc.dc.customview.view.CustomLinearLayout
         android:id="@+id/layer_player"
         android:orientation="vertical"
         android:visibility="visible"
+        android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <com.aliyun.vodplayerview.widget.AliyunVodPlayerView
-            android:id="@+id/player_view"
-            android:background="#0f0"
-            android:layout_width="match_parent"
-            android:layout_height="200dp">
-        </com.aliyun.vodplayerview.widget.AliyunVodPlayerView>
-        <ImageView
-            android:id="@+id/iv_play"
-            android:src="@drawable/icon_play"
-            android:layout_gravity="center"
-            android:layout_width="60dp"
-            android:layout_height="60dp" />
+        android:layout_height="194dp">
     </com.cc.dc.customview.view.CustomLinearLayout>
 </LinearLayout>
