--- a/kotlindemo/src/main/res/layout/activity_main.xml
+++ b/kotlindemo/src/main/res/layout/activity_main.xml
@@ -1,29 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawerLayout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/tvName"
-        android:text="1111111111"
-        android:padding="5dp"
-        android:textSize="16sp"
-        android:textColor="#f00"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_marginTop="20dp"
-        android:onClick="clickButton"
-        android:textColor="@color/colorPrimaryDark"
-        android:text="button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <FrameLayout
+        android:id="@+id/content"
+        android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+        android:layout_height="match_parent">
+    </FrameLayout>
+    <LinearLayout
+        android:id="@+id/leftDrawer"
+        android:layout_gravity="start"
+        android:background="#ff0"
+        android:orientation="vertical"
+        android:layout_width="200dp"
+        android:layout_height="match_parent">
+    </LinearLayout>
+</android.support.v4.widget.DrawerLayout>
