--- a/kotlindemo/src/main/res/layout/fragment_main.xml
+++ b/kotlindemo/src/main/res/layout/fragment_main.xml
@@ -9,6 +9,11 @@
         android:text="button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn_test_activity"
+        android:text="TestActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:text="FragmentMain"
         android:textSize="18sp"
