添加刷新、加载更多的操作

--- a/kotlindemo/src/main/res/layout/fragment_main.xml
+++ b/kotlindemo/src/main/res/layout/fragment_main.xml
@@ -14,6 +14,11 @@
         android:text="TestActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn_refresh_activity"
+        android:text="PullRefreshLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:text="FragmentMain"
         android:textSize="18sp"
@@ -21,4 +26,14 @@
         android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <com.cc.dc.kotlindemo.widgets.PullRefreshLayout
+        android:id="@+id/pullRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+    </com.cc.dc.kotlindemo.widgets.PullRefreshLayout>
 </LinearLayout>
