--- a/kotlindemo/src/main/res/values/styles.xml
+++ b/kotlindemo/src/main/res/values/styles.xml
@@ -10,4 +10,11 @@
         <item name="android:screenOrientation">portrait</item>
     </style>
 
+    <style name="ViewStatusText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:padding">@dimen/normal_10</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
