--- a/kotlindemo/src/main/res/layout/fragment_main.xml
+++ b/kotlindemo/src/main/res/layout/fragment_main.xml
@@ -4,26 +4,36 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <Button
-        android:id="@+id/btn_show_drawer"
-        android:text="button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/btn_test_activity"
-        android:text="TestActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/btn_refresh_activity"
-        android:text="PullRefreshLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
     <TextView
         android:text="FragmentMain"
         android:textSize="18sp"
         android:textColor="#f00"
         android:padding="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn_show_drawer"
+        android:text="开启左侧边栏"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn_test_activity"
+        android:text="各种语法测试页面"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn_common_list_activity"
+        android:text="测试普通的列表页面"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn_refresh_activity"
+        android:text="测试下拉刷新上拉加载更多页面"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn_spinner_activity"
+        android:text="测试下拉选择"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <com.cc.dc.kotlindemo.widgets.PullRefreshLayout
