--- a/kotlindemo/src/main/res/layout/item_spinner_normal.xml
+++ b/kotlindemo/src/main/res/layout/item_spinner_normal.xml
@@ -2,16 +2,16 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#ff0000"
+    android:background="@color/red"
     android:gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="40dp">
     <TextView
         android:id="@+id/tvName"
-        android:text="Error: No Type Match"
+        android:text="111"
         android:padding="6dp"
-        android:textSize="25sp"
-        android:textColor="#fff"
+        android:textSize="18sp"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
