--- a/kotlindemo/src/main/res/values/colors.xml
+++ b/kotlindemo/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="red">#ff0000</color>
+    <color name="yellow">#ffff00</color>
 </resources>
